# libresources

./: .gitignore  CMakeLists.txt  additional_execution.cmake  libresourcesConfig.cmake.in
Utilities/bin2c/: CMakeLists.txt  bin2c.c
Utilities/bin2coff/: CMakeLists.txt
include/: dummy.h
